Commit 12/10/2025